--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,20 @@
 }
 
 .black {
-  background-color: deepskyblue;
+  background-color: rgb(21, 77, 38);
 }
 
 .white {
-  background-color: #eed4ac;
+  background-color: #b0ada9;
+}
+
+.selected {
+  background-color: brown;
+}
+
+.available {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: green;
 }
